# VR_teleoperation

./: .gitignore  .ignore  Makefile  README.md  VRTeleoperation.code-workspace  VRTeleoperation.uproject
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/: VR_DebugWidget.uasset
Content/Blueprints/: P3Bot.uasset  RobotBP.uasset  VRGameMode.uasset
Content/Inputs/: IMC_Robot.uasset
Content/Inputs/Actions/: IA_Hand_A.uasset  IA_Hand_B.uasset  IA_Hand_Grasp_Left.uasset  IA_Hand_Grasp_Right.uasset  IA_Hand_IndexCurl_Left.uasset  IA_Hand_IndexCurl_Right.uasset  IA_Hand_Thumbstick_Left.uasset  IA_Hand_Thumbstick_Right.uasset  IA_Hand_X.uasset  IA_Hand_Y.uasset
Content/Maps/: P3Bot_Testing.umap
Content/Meshes/Static/P3Bot/: P3Bot_Body.fbx  P3Bot_Body.uasset
Content/VRTemplate/Blueprints/: VRGameMode.uasset  VRPawn.uasset
Content/VRTemplate/Input/: IMC_Hands.uasset
Content/VRTemplate/Input/Actions/Hands/: IA_Hand_A.uasset  IA_Hand_B.uasset  IA_Hand_Thumbstick_Left.uasset  IA_Hand_Thumbstick_Right.uasset  IA_Hand_X.uasset  IA_Hand_Y.uasset  (+3 more)
Content/VRTemplate/Maps/: VRTemplateMap.umap  VRTemplateMap_BuiltData.uasset
CustomLibs/: CMakeLists.txt  RobotMiddleware.cpp  RobotMiddleware.h  VRController.cpp  VRController.h  VRController.ice
Source/: VRTeleoperation.Target.cs  VRTeleoperationEditor.Target.cs
Source/VRTeleoperation/: VRTeleoperation.Build.cs
Source/VRTeleoperation/Private/: LidarVisualizator.cpp  MyVRGameMode.cpp  Robot.cpp
Source/VRTeleoperation/Public/: LidarVisualizator.h  MyVRGameMode.h  Robot.h  RobotMiddleware.h
